<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nramos.sleepcycle.MainActivity">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@drawable/ic_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

</menu>
