<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <AnalogClock
        android:id="@+id/simpleAnalogClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DigitalClock
        android:id="@+id/simpleDigitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:textColor="#FFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleAnalogClock"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/viewAlarmsTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/view_alarms"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fadingTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleDigitalClock"
        app:layout_constraintVertical_bias="0.519" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleDigitalClock"
        app:layout_constraintVertical_bias="0.328"
        app:texts="@array/information"
        app:timeout="10000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        />

    <Button
        android:id="@+id/sleepByBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/sleep_by"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@id/left"
        app:layout_constraintEnd_toStartOf="@id/sleepNowBtn"
        app:layout_constraintTop_toBottomOf="@id/bottomTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/button_image_sleepby"
        android:drawableTint="@android:color/white"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/sleepNowBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/sleep_now"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/middleLeft"
        app:layout_constraintEnd_toStartOf="@id/middleRight"
        app:layout_constraintTop_toBottomOf="@id/bottomTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/button_image_sleepnow"
        android:drawableTint="@android:color/white"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/awakeByBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="serif"
        android:text="@string/awake_by"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/middleRight"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintTop_toBottomOf="@id/bottomTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableTop="@drawable/button_image_awakeby"
        android:drawableTint="@android:color/white"
        android:drawablePadding="10dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>